Removed unnecesary generic return. Added headless env var